# Pygets

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASING.md  mkdocs.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: publish-pypi.yml  tests.yml
docs/: CONTRIBUTING.md  customization.md  getting-started.md  index.md
examples/: example_all.py  example_button.py  example_checkbox.py  example_combobox.py  example_popup.py  example_slider.py  example_textbox.py  example_togglebutton.py  run_all.py
examples/in_production/: example_progressbar.py
pygets/: __init__.py
pygets/core/: theme.py  widgets.py
pygets/utils/: colors.py  validators.py
pygets/widgets/: __init__.py  button.py  checkbox.py  combobox.py  popup.py  slider.py  textbox.py  togglebutton.py
tests/: conftest.py  test_button.py  test_checkbox.py  test_combobox.py  test_popup.py  test_slider.py  test_textbox.py  test_togglebutton.py
