[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygets"
version = "1.0.0"
description = "GUI widgets toolkit for pygame"
authors = [{name = "ZentarDev"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["pygame", "gui", "widgets", "ui", "game-dev"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pygame",
    "pyperclip"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.0",
    "twine>=5.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pygets*"]
